Fixed `Background and foreground colors do not have a sufficient contrast ratio.`

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -13,6 +13,6 @@ body {
 }
 
 a:link, a:visited, a:hover {
-  color: #3498DB;
+  color: #0366d6;
   text-decoration: none;
 }
